--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
+    "@catppuccin/tailwindcss": "^0.1.6",
     "@svgr/webpack": "^8.0.1",
     "@types/mdx": "^2.0.12",
     "@types/react": "^18.2.73",
