--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ NEXT_PUBLIC_GISCUS_CATEGORY=
 NEXT_PUBLIC_GISCUS_CATEGORY_ID=
 NEXT_PUBLIC_UTTERANCES_REPO=
 NEXT_PUBLIC_DISQUS_SHORTNAME=
+NEXT_UMAMI_ID=IjkPHGh46Ps6NnzeiY3Q5G9jYzWQI1Ru
 
 
 MAILCHIMP_API_KEY=
