--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.400.0",
     "next": "14.2.3",
     "next-contentlayer2": "0.4.6",
+    "next-seo": "^6.6.0",
     "next-themes": "^0.3.0",
     "pliny": "0.2.1",
     "postcss": "^8.4.24",
