feat: Phase 3 - Design System Foundation
🎨 Systematic Component Architecture:
• Create reusable Button component with 6 variants (primary, secondary, ghost, outline, destructive, link)
• Standardize all button implementations across codebase
• Establish comprehensive design token system with TypeScript types

🛠️ Design System Infrastructure:
• components/ui/Button.tsx: Full-featured button with loading states, icons, sizes
• lib/design-tokens.ts: Centralized spacing, typography, colors, shadows, and animation tokens
• lib/utils.ts: Utility functions for className merging with clsx and tailwind-merge

📐 Systematic Design Tokens:
• Spacing scale based on 4px grid (0-32 with extensions)
• Typography scale with consistent line heights and letter spacing
• Color palette with semantic variants and accessibility compliance
• Border radius, shadow, z-index, and animation duration scales
• Component size variants (xs, sm, md, lg, xl) with consistent proportions

🎯 Utility Class System:
• Typography classes: text-heading-1/2/3, text-body, text-body-small, text-caption
• Spacing classes: space-section, space-content, space-elements
• Container classes: container-narrow/normal/wide with responsive padding
• Interactive states: interactive-base, focus-ring for consistent UX
• Card system: card-base, card-hover for consistent component styling
• Surface classes: surface-primary/secondary/tertiary for layer hierarchy

🔧 Component Standardization:
• Updated Main.tsx to use design system classes and Button component
• Updated Card.tsx with systematic styling approach
• Updated not-found.tsx with standardized Button usage
• Enhanced Tailwind config with additional spacing tokens

📊 Developer Experience:
• TypeScript support for all design tokens with autocomplete
• Consistent naming conventions across all design elements
• Modular approach for easy maintenance and extension
• Documentation-ready token system for design handoff

✨ Maintainability Benefits:
• Centralized design decisio

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@/lib/*": ["lib/*"],
       "@/hooks/*": ["hooks/*"],
       "@/css/*": ["css/*"],
+      "@/ui/*": ["components/ui/*"],
       "contentlayer/generated": ["./.contentlayer/generated"]
     },
     "plugins": [
