--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
     "autoprefixer": "^10.4.13",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "contentlayer2": "0.4.6",
     "esbuild": "0.20.2",
     "framer-motion": "^11.11.17",
@@ -48,6 +49,7 @@
     "remark-gfm": "^4.0.0",
     "remark-github-blockquote-alert": "^1.2.1",
     "remark-math": "^6.0.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.3",
     "unist-util-visit": "^5.0.0"
   },
